# taglib

./: .astylerc  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  ConfigureChecks.cmake  Doxyfile.cmake  INSTALL  INSTALL.md  Makefile.am  NEWS  README.md  audioproperties.cpp  audioproperties.h  config-taglib.h.cmake  config.h.cmake  configure.in.in  fileref.cpp  fileref.h  tag.cpp  tag.h  taglib-config.cmake  taglib-config.cmake.in  taglib-config.cmd.cmake  taglib-config.in  taglib.pc.cmake  taglib.pc.in  test_acid.cpp
bindings/c/: CMakeLists.txt  Makefile.am  configure.in.in  tag_c.cpp  tag_c.h  taglib_c.pc.cmake  taglib_c.pc.in
examples/: CMakeLists.txt  Makefile.am  framelist.cpp  inspect.cpp  matroskareader.cpp  matroskawriter.cpp  strip-id3v1.cpp  tagreader.cpp  tagreader_c.c  tagwriter.cpp  updatemp3apicframe.cpp
taglib/: CMakeLists.txt  Makefile.am  apefooter.h  audioproperties.cpp  audioproperties.h  config-taglib.h.cmake  fileref.cpp  fileref.h  tag.cpp  tag.h  taglib.pro  taglib_config.h.cmake  taglib_export.h  tagunion.cpp  tagunion.h  tagutils.cpp  tagutils.h
taglib/ape/: CMakeLists.txt  Makefile.am  apefile.cpp  apefile.h  apefooter.cpp  apefooter.h  apeitem.cpp  apeitem.h  apeproperties.cpp  apeproperties.h  apetag.cpp  apetag.h
taglib/asf/: CMakeLists.txt  Makefile.am  asfattribute.cpp  asfattribute.h  asffile.cpp  asffile.h  asfpicture.cpp  asfpicture.h  asfproperties.cpp  asfproperties.h  asftag.cpp  asftag.h  asfutils.h
taglib/dsdiff/: dsdiffdiintag.cpp  dsdiffdiintag.h  dsdifffile.cpp  dsdifffile.h  dsdiffproperties.cpp  dsdiffproperties.h
taglib/dsf/: dsffile.cpp  dsffile.h  dsfproperties.cpp  dsfproperties.h
taglib/ebml/: ebmlconstants.h  ebmlelement.cpp  ebmlelement.h  ebmlfile.cpp  ebmlfile.h
taglib/flac/: CMakeLists.txt  Makefile.am  flacfile.cpp  flacfile.h  flacmetadatablock.cpp  flacmetadatablock.h  flacmetadatablocks.cpp  flacmetadatablocks.h  flacpicture.cpp  flacpicture.h  flacpicturetag.cpp  flacpicturetag.h  flacproperties.cpp  flacproperties.h  flactag.h  flacunknownmetadatablock.cpp  flacunknownmetadatablock.h
taglib/it/: itfile.cpp  itfile.h  itfiletyperesolver.cpp  itfiletyperesolver.h  itproperties.cpp  itproperties.h
taglib/matroska/: matroskaattachedfile.cpp  matroskaattachedfile.h  matroskaattachments.cpp  matroskaattachments.h  matroskachapter.cpp  matroskachapter.h  matroskachapteredition.cpp  matroskachapteredition.h  matroskachapters.cpp  matroskachapters.h  matroskacues.cpp  matroskacues.h  matroskaelement.cpp  matroskaelement.h  matroskafile.cpp  matroskafile.h  matroskaproperties.cpp  matroskaproperties.h  matroskaseekhead.cpp  matroskaseekhead.h  matroskasegment.cpp  matroskasegment.h  matroskasimpletag.cpp  matroskasimpletag.h  matroskatag.cpp  matroskatag.h  matroskawritestyle.h
taglib/mod/: modfile.cpp  modfile.h  modfilebase.cpp  modfilebase.h  modfileprivate.h  modproperties.cpp  modproperties.h  modtag.cpp  modtag.h
taglib/mp4/: Makefile.am  mp4atom.cpp  mp4atom.h  mp4chapter.cpp  mp4chapter.h  mp4chapterholder.cpp  mp4chapterholder.h  mp4chapterlist.cpp  mp4chapterlist.h  mp4coverart.cpp  mp4coverart.h  mp4file.cpp  mp4file.h  mp4item.cpp  mp4item.h  mp4itemfactory.cpp  mp4itemfactory.h  mp4nerochapterlist.cpp  mp4nerochapterlist.h  mp4properties.cpp  mp4properties.h  mp4qtchapterlist.cpp  mp4qtchapterlist.h  mp4stem.cpp  mp4stem.h  mp4tag.cpp  mp4tag.h
taglib/mpc/: combinedtag.h  mpcfile.cpp  mpcfile.h  mpcproperties.cpp  mpcproperties.h
taglib/mpeg/: Makefile.am  adtsheader.cpp  adtsheader.h  mpegfile.cpp  mpegfile.h  mpegheader.cpp  mpegheader.h  mpegproperties.cpp  mpegproperties.h  mpegutils.h  xingheader.cpp  xingheader.h
taglib/ogg/: Makefile.am  oggfile.cpp  oggfile.h  oggpage.cpp  oggpage.h  oggpageheader.cpp  oggpageheader.h  xiphcomment.cpp  xiphcomment.h
taglib/riff/: CMakeLists.txt  Makefile.am  infotag.cpp  infotag.h  rifffile.cpp  rifffile.h  riffutils.h
taglib/s3m/: s3mfile.cpp  s3mfile.h  s3mfiletyperesolver.cpp  s3mfiletyperesolver.h  s3mproperties.cpp  s3mproperties.h
taglib/shn/: shnfile.cpp  shnfile.h  shnproperties.cpp  shnproperties.h  shntag.cpp  shntag.h  shnutils.h
taglib/shorten/: shortenfile.cpp  shortenproperties.cpp  shortenproperties.h  shortentag.cpp  shortenutils.h
taglib/speex/: Makefile.am  speexfile.cpp  speexfile.h  speexproperties.cpp  speexproperties.h
taglib/toolkit/: Makefile.am  avx2search.cpp  cpuFeaturesCheck.cpp  cpuFeaturesCheck.h  fastsearch.h  propertymapping.dox  taglib.cpp  taglib.h  tbyteswap.cpp  tbyteswap.h  tbytevector.cpp  tbytevector.h  tbytevectorlist.cpp  tbytevectorlist.h  tbytevectorstream.cpp  tbytevectorstream.h  tdebug.cpp  tdebug.h  tdebuglistener.cpp  tdebuglistener.h  tfile.cpp  tfile.cpp.orig  tfile.h  tfilenamehandle.h  tfilestream.cpp  tfilestream.h  tiostream.cpp  tiostream.h  tlist.h  tlist.tcc  tmap.h  tmap.tcc  tpicture.cpp  tpicture.h  tpicturemap.cpp  tpicturemap.h  tpicturetype.cpp  tpicturetype.h  tpropertymap.cpp  tpropertymap.h  (+21 more)
taglib/trueaudio/: trueaudiofile.cpp  trueaudiofile.h  trueaudioproperties.cpp  trueaudioproperties.h
taglib/wavpack/: wavpackfile.cpp  wavpackfile.h  wavpackproperties.cpp  wavpackproperties.h
taglib/xm/: xmfile.cpp  xmfile.h  xmfiletyperesolver.cpp  xmfiletyperesolver.h  xmproperties.cpp  xmtag.cpp  (+2 more)
tests/: CMakeLists.txt  Makefile.am  main.cpp  plainfile.h  test_acid.cpp  test_aiff.cpp  test_ape.cpp  test_apetag.cpp  test_asf.cpp  test_bytevector.cpp  test_bytevectorlist.cpp  test_bytevectorstream.cpp  test_complexproperties.cpp  test_dsdiff.cpp  test_dsf.cpp  test_file.cpp  test_fileref.cpp  test_fileref_detect.cpp  test_flac.cpp  test_flacmetadatablock.cpp  test_flacmetadatablocks.cpp  test_flacpicture.cpp  test_flacunknownmetadatablock.cpp  test_id3v1.cpp  test_id3v2.cpp  test_id3v2framefactory.cpp  test_info.cpp  test_it.cpp  test_list.cpp  test_map.cpp  test_matroska.cpp  test_mod.cpp  test_mp4.cpp  test_mp4coverart.cpp  test_mp4item.cpp  test_mp4stem.cpp  test_mpc.cpp  test_mpeg.cpp  test_ogg.cpp  test_oggflac.cpp  (+26 more)
(+342 files in other folders)
